--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "lint": "eslint ./"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "body-parser": "1.19.0",
     "express": "4.17.1",
     "morgan": "1.9.1",
-    "mysql": "2.17.1",
+    "mysql": "^2.17.1",
     "request": "2.88.0",
     "sequelize": "5.21.2"
   },
